Merging snmprefactor branch into trunk. Fix for OPENAM-410
* OpenSSOMonitoringUtil moved to MonitoringUtil and made static helper class
* Moving isRunning to MonitoringUtil, so we can handle missing SNMP library
* Fixing the non-working RMI monitoring option
* Mostly generics-related refactoring, also some Java 1.5 change
* Basic LDAPConnectionPool monitoring
* Tools don't need jdmkrt any more, fixing classpathes in scripts
* Making SUN-OPENSSO-SERVER a subclass and remove lots of generated code...

git-svn-id: https://svn.forgerock.org/openam/trunk@1029 0f4defcf-c51a-4c67-9f44-6fb5eba73c5d